--- a/Client/package.json
+++ b/Client/package.json
@@ -12,9 +12,10 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.25.0",
-    "bootstrap": "^5.0.0-alpha3",
+    "bootstrap": "^5.1.3",
     "lodash.debounce": "^4.0.8",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.2.0",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-redux": "^7.2.6",
