--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
     "google-auth-library": "^7.11.0",
-    "jwt-decode": "^3.1.2"
+    "jwt-decode": "^3.1.2",
+    "mongodb": "^4.4.1"
   }
 }
