--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.2",
     "google-auth-library": "^7.11.0",
     "jwt-decode": "^3.1.2",
-    "mongodb": "^4.4.1"
+    "mongodb": "^4.4.1",
+    "nodemon": "^2.0.18"
   }
 }
