--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,8 @@
     "google-auth-library": "^7.11.0",
     "jwt-decode": "^3.1.2",
     "mongodb": "^4.4.1",
-    "nodemon": "^2.0.18"
+    "nodemon": "^2.0.18",
+    "pg": "^8.11.3",
+    "sequelize": "^6.32.1"
   }
 }
