--- a/Client/package.json
+++ b/Client/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/himanu/Task-Tracker/tree/main/Client",
   "name": "task-tracker",
   "version": "0.1.0",
   "private": true,
@@ -13,6 +14,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
+    "gh-pages": "^6.0.0",
     "lodash.debounce": "^4.0.8",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.0",
@@ -26,6 +28,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
